# zkcircuit-derive

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs  witness.rs
zk-circuit/: Cargo.toml
zk-circuit/examples/: basic.rs
zk-circuit/src/: lib.rs
zkcircuit-derive/: Cargo.toml
zkcircuit-derive/src/: lib.rs
